# cpp_3d_renderer

./: .clang-format  .gitignore  conanfile.txt
src/: Application.cpp  Application.hpp  Buffer2d.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DisplayUtils.cpp  DisplayUtils.hpp  IntRect.hpp  LinAlg.cpp  LinAlg.hpp  Model.cpp  Model.hpp  RGBA32Color.cpp  RGBA32Color.hpp  RGBA32Colors.hpp  RGBA32Image.cpp  RGBA32Image.hpp  RGBA32Pixel.hpp  Rect.hpp  Renderer.cpp  Renderer.hpp  ShapeBuilder.cpp  ShapeBuilder.hpp  Triangle.cpp  Triangle.hpp  Vector3.cpp  Vector3.hpp  main.cpp
